PLAT-113184: FixedPopupPanels must be opaque in high-contrast
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/styles/colors-highcontrast.less
+++ b/styles/colors-highcontrast.less
@@ -22,6 +22,10 @@
 // ---------------------------------------
 @sand-flexiblepopuppanels-panel-bg-color: @sand-popup-bg-color;
 
+// FixedPopupPanels
+// ---------------------------------------
+@sand-fixedpopuppanels-panel-bg-color: @sand-popup-bg-color;
+
 // Input
 // ---------------------------------------
 @sand-input-overlay-background-color: @sand-popup-bg-color;
